<resources>
    <string name="app_name">Data4Help</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="e_session_expired">Timeout</string>
    <string name="code_404">404 Page not found!</string>
    <string name="code_0">Error code 0</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_requests">Requests</string>
    <string name="title_send_data">Send User Data</string>
    <string name="data4help_title">Home</string>
    <string name="registration_info">Please provide all the required informations</string>
    <string name="registration_title">Registration</string>
    <string name="registration_name">Name</string>
    <string name="registration_surname">Surname</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_submit_button">Submit</string>
    <string name="registration_comune_of_birth">Comune of Birth</string>
    <string name="registration_codice_fiscale">Codice Fiscale</string>
    <string name="registration_date_of_birth">Date of birth</string>
    <string name="registration_yyyy_mm_dd">YYYY/MM/DD</string>
</resources>
