<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView2" android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/registration_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
                    android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display3"/>
            <TextView
                    android:text="@string/registration_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
                    android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
            <TextView
                    android:text="@string/registration_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="80dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textView2" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextName" android:hint="@string/registration_name" android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/registration_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextSurname" android:inputType="textPersonName" android:hint="@string/registration_surname"
                    android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/registration_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editTextEmail" android:hint="@string/prompt_email" android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextPassword" android:hint="@string/registration_password" android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/registration_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" android:layout_marginTop="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editTextDateOfBirth" android:hint="@string/registration_yyyy_mm_dd"
                    android:layout_marginTop="2dp"/>
            <TextView
                    android:text="@string/registration_codice_fiscale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextCodiceFiscale" android:layout_marginTop="2dp"
                    android:hint="@string/registration_codice_fiscale"/>
            <TextView
                    android:text="Sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" tools:layout_editor_absoluteY="453dp"
                    tools:layout_editor_absoluteX="25dp" android:id="@+id/radioButtonGroupSex">
                <RadioButton
                        android:text="Male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/radioButtonMale"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="Female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="453dp"
                        tools:layout_editor_absoluteX="88dp" android:id="@+id/radioButtonFemale"
                        android:layout_weight="1"/>
            </RadioGroup>
            <TextView
                    android:text="@string/registration_comune_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="534dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/textViewComune" android:layout_weight="1"
                    android:layout_marginTop="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextComune" android:hint="@string/registration_comune_of_birth"/>
            <Button
                    android:text="@string/registration_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="594dp"
                    tools:layout_editor_absoluteX="16dp" android:id="@+id/buttonSubmit"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>